--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,10 @@ body {
   transform: scaleX(-1); /* mirror horizontally */
 }
 
+.flipY {
+  transform: scaleY(-1);
+}
+
 .section {
   padding-top: 1.25rem;  
   padding-bottom: 1.25rem;
@@ -74,4 +78,12 @@ body {
   font-size: 2.25rem; /* text-4xl = 36px */
   line-height: 2.5rem; /* line-height المناسب */
   margin-bottom: 2.5rem; /* mb-10 = 40px */
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
 }
